fixed title overflow 2nd

--- a/src/cryptoview-structure/FirstSec.css
+++ b/src/cryptoview-structure/FirstSec.css
@@ -8,5 +8,6 @@
   }
   #top-title{
     text-align: center;
+    font-size: 4rem;
   }
 }
